Revision history for {{$dist->name}}

{{$NEXT}}
        - provide mnemonics table for severity
        - evaluate TAP::DOM-specific pragma +tapdom_error
        - TAP::DOM::Archive allows filehandle as 'source'
          (requires new dependency to Scalar::Util)

0.92      2020-11-09
        - introduce 'severity' level to represent the combination of
          ok/notok and todo/skip as one ordinal number.
        - more complete information in non-test lines (plan, pragma)

0.91      2020-06-30
        - === INCOMPATIBILITY WARNING ===

          This release contains several changes towards a more
          consistent data handling. For casual users nothing
          substantially should change. But if you are one of the
          power users out there (I'm looking at you, Amzn), then
          read this changelog carefully.

        - fix argument handling: pass-through to TAP::DOM, delete
          newly introduced 'disable_global_kv_data'

        - TAP::Archive reading skips nonexistent files from meta.yml

        - to_tap() works with unblessed inner elements (though the
          TAP::DOM itself needs bless to call ->to_tap method)

        - new option 'document_data_prefix' to specify the prefix in
          '# Test-key: value' lines

        - Experimental: Allow TAP preprocessing
          This can help to reduce the tap line count before it hits
          the TAP parser, assuming regex processing is faster.

        - Incompatible change: de-confuse 'parse_errors'
          * it now also contains the count of parse errors not the
            actual messages anymore - those are now in
            'parse_errors_msgs'

        - new option 'document_data_ignore' to not cover certain fields

        - new option 'put_dangling_kv_data_under_lazy_plan' to
          fix a gap when 'disable_global_kv_data' is set.

        - new option 'trim_fieldvalues' to trim trailing whitespace
          from document_data/kv_data fields
